Added many commands, updated dependencies, fixed alot of bugs and improved many things!